[project]
name = "fastopic-no-topmost"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jsture", email = "jsmadsen@sund.ku.dk" }
]
dependencies = [
    "numpy>=2.1.3",
    "torch>=2.2.0",
    "pandas>=2.2.3",
    "tqdm>=4.66.6",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.2",
    "sentence-transformers>=3.2.1",
    "pre-commit>=4.0.1",
    "plotly>=5.24.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastopic_no_topmost"]
